// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`codepen transform handles examples importing exampleData 1`] = `
"const { createListItems, IExampleItem } = window.FabricExampleData;
const FabricComponent = window.Fabric.Fabric;

const FakeExampleDataExample = () => {
  return <div>hi</div>;
};

ReactDOM.render(
  <FabricComponent>
    <FakeExampleDataExample />
  </FabricComponent>,
  document.getElementById('content')
);
"
`;

exports[`codepen transform handles examples with class components 1`] = `
"const { SpinButton } = window.Fabric;
const FabricComponent = window.Fabric.Fabric;

class SpinButtonBasicExample extends React.Component<any, any> {
  public render(): JSX.Element {
    return (
      <div style={{ width: '400px' }}>
        <SpinButton
          defaultValue=\\"0\\"
          label={'Basic SpinButton:'}
          min={0}
          max={100}
          step={1}
          iconProps={{ iconName: 'IncreaseIndentLegacy' }}
          incrementButtonAriaLabel={'Increase value by 1'}
          decrementButtonAriaLabel={'Decrease value by 1'}
        />
      </div>
    );
  }
}

ReactDOM.render(
  <FabricComponent>
    <SpinButtonBasicExample />
  </FabricComponent>,
  document.getElementById('content')
);
"
`;

exports[`codepen transform handles examples with function components 1`] = `
"const { Label } = window.Fabric;
const FabricComponent = window.Fabric.Fabric;

const LabelBasicExample = () => {
  return (
    <div>
      <Label>I'm a Label</Label>
    </div>
  );
};

ReactDOM.render(
  <FabricComponent>
    <LabelBasicExample />
  </FabricComponent>,
  document.getElementById('content')
);
"
`;
